[gd_scene load_steps=11 format=3 uid="uid://btmej8oakg4f1"]

[ext_resource type="Script" path="res://Hud/Scenes/Thingy/thingy_vico.gd" id="1_ma3ha"]
[ext_resource type="PackedScene" uid="uid://exe3ppvvv74m" path="res://Hud/Scenes/bar.tscn" id="2_nad20"]
[ext_resource type="Theme" uid="uid://d0f4im7h1ne7c" path="res://Hud/Themes/ShadowText.tres" id="3_e4ujg"]
[ext_resource type="Theme" uid="uid://b8t7tkhvril5g" path="res://Hud/Themes/Standard.tres" id="3_q0aqb"]
[ext_resource type="Texture2D" uid="uid://bklpf2q2wnyoi" path="res://Art/Icons/Hud/Juice.png" id="4_65ha1"]
[ext_resource type="Theme" uid="uid://rfljn78ajnbs" path="res://Hud/Themes/Invis.tres" id="5_a1a0r"]
[ext_resource type="Texture2D" uid="uid://cygbjwvlojo77" path="res://Art/Icons/Hud/Dice.png" id="5_eqmag"]
[ext_resource type="PackedScene" uid="uid://cnygr4pwivdv1" path="res://Hud/Scenes/RichLabel.tscn" id="6_tqssk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bk8n"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epsh3"]
draw_center = false
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_size = 2

[node name="ThingyVico" type="MarginContainer"]
custom_minimum_size = Vector2(160, 50)
offset_right = 250.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ma3ha")

[node name="Selected" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Border" type="Panel" parent="Selected"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5bk8n")

[node name="Shadow" type="Panel" parent="Selected"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_epsh3")

[node name="Progress Bar" parent="." instance=ExtResource("2_nad20")]
unique_name_in_owner = true
layout_mode = 2

[node name="Xp Bar" parent="." instance=ExtResource("2_nad20")]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 4)
layout_mode = 2
size_flags_vertical = 8
kill_background = true
animate = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Duration and Level" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Duration and Level"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Progress Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Duration and Level/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_e4ujg")
bbcode_enabled = true
text = "14"
fit_content = true
autowrap_mode = 0

[node name="Max Progress Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Duration and Level/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_e4ujg")
bbcode_enabled = true
text = "123e123"
fit_content = true
autowrap_mode = 0

[node name="Level Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Duration and Level"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_e4ujg")
bbcode_enabled = true
text = "[img=<15>]res://Art/Icons/Hud/Star.png[/img] 999"
fit_content = true
autowrap_mode = 0

[node name="Juiced" type="TextureRect" parent="MarginContainer/HBoxContainer/Duration and Level"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("4_65ha1")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 0
alignment = 1

[node name="Output Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("3_e4ujg")
bbcode_enabled = true
text = "[b][i]+123e123"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CritSuccessDie" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_eqmag")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_e4ujg")
bbcode_enabled = true
text = "[b][i]x"
fit_content = true
autowrap_mode = 0

[node name="CritSuccess" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource("6_tqssk")]
unique_name_in_owner = true
layout_mode = 2
text = "[b][i]2.5"
autowrap_mode = 0
italics = true
bold = true

[node name="Control" type="Control" parent="."]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Index Label" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -7.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_q0aqb")
bbcode_enabled = true
text = "[i]#1"
fit_content = true
autowrap_mode = 0

[node name="FlyingTexts" type="Control" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("5_a1a0r")
metadata/_edit_lock_ = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
